apps/default/nginx/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
    - hosts: 
        - "untouchedwagons.com"
      secretName: "com-untouchedwagons-testing"
  rules:
  - host: nginx.testing.untouchedwagons.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
